--- a/apex-mdapi/src/classes/MetadataRetrieveController.cls
+++ b/apex-mdapi/src/classes/MetadataRetrieveController.cls
@@ -29,37 +29,71 @@
  **/
 public with sharing class MetadataRetrieveController 
 {
-	public List<SelectOption> Layouts {get; set;}
-	public String LayoutName {get; set;}	
+	public List<SelectOption> MetaDataTypes {get; set;}
+	public String MetaDataType {get; set;}		
+	public List<SelectOption> MetaDataItems {get; set;}
+	public String MetaDataItem {get; set;}	
 	public String MetadataFileName {get; set;}
 	public String MetadataFileData {get; set;}
 	public MetadataService.AsyncResult AsyncResult {get; private set;}
 	public String MetaDataRetrieveZip { get; private set; }	
 	public List<MetadataFile> MetadataFiles { get; set; }		
 	
-	public PageReference listLayouts()
+	public PageReference init()
 	{
-		// List Layouts
-		Layouts = new List<SelectOption>();		
+		// List available Metadata Types via the 'describeMetadata' API call
+		MetadataService.MetadataPort service = MetadataServiceExamples.createService();					
+		MetadataService.DescribeMetadataResult describeResult = service.describeMetadata(26);
+		List<String> metadataTypeNames = new List<String>();
+		for(MetadataService.DescribeMetadataObject metadataObject : describeResult.metadataObjects)
+		{
+			metadataTypeNames.add(metadataObject.xmlName);
+			// Include child Metadata Types (such as CustomField, ValidationRule etc..)
+			if(metadataObject.childXmlNames!=null)
+				for(String childXmlName : metadataObject.childXmlNames)
+					if(childXmlName!=null)
+						metadataTypeNames.add(childXmlName);
+		}	
+
+		// Sort Metadata Types
+		metadataTypeNames.sort();
+		MetaDataTypes = new List<SelectOption>();				
+		for(String metadataTypeName : metadataTypeNames)
+			MetaDataTypes.add(new SelectOption(metadataTypeName, metadataTypeName));
+					
+		// Default to first Metadata Type returned	
+		MetaDataType = MetaDataTypes[0].getValue();				
+		// Retrieve Metadata items for the selected Metadata Type
+		listMetadataItems();		
+		return null;	
+	}
+	
+	public PageReference listMetadataItems()
+	{
+		// List Metadata items for the selected Metadata Type
+		MetaDataItems = new List<SelectOption>();		
 		MetadataService.MetadataPort service = createService();				
 		List<MetadataService.ListMetadataQuery> queries = new List<MetadataService.ListMetadataQuery>();		
 		MetadataService.ListMetadataQuery queryLayout = new MetadataService.ListMetadataQuery();
-		queryLayout.type_x = 'Layout';
+		queryLayout.type_x = MetaDataType;
 		queries.add(queryLayout);		
 		MetadataService.FileProperties[] fileProperties = service.listMetadata(queries, 25);
 		
 		// Sort
 		List<String> fullNames = new List<String>();
-		for(MetadataService.FileProperties fileProperty : fileProperties)
-			fullNames.add(fileProperty.fullName);
-		fullNames.sort();
-		for(String fullName : fullNames)
-			Layouts.add(new SelectOption(fullName,EncodingUtil.urlDecode(fullName, 'UTF-8')));
+		if(fileProperties!=null)
+		{
+			for(MetadataService.FileProperties fileProperty : fileProperties)
+				fullNames.add(fileProperty.fullName);
+			fullNames.sort();
+			for(String fullName : fullNames)
+				MetaDataItems.add(new SelectOption(fullName,EncodingUtil.urlDecode(fullName, 'UTF-8')));
+		}
 
 		return null;	
 	}
 	
-	public PageReference retrieveLayout()
+	public PageReference retrieveMetadataItem()
 	{		
 		ApexPages.addMessage(new ApexPages.Message(ApexPages.Severity.Info, 'Retrieving metadata...'));
 		
@@ -76,10 +110,10 @@ public with sharing class MetadataRetrieveController
 		retrieveRequest.specificFiles = null;
 		retrieveRequest.unpackaged = new MetadataService.Package_x();
 		retrieveRequest.unpackaged.types = new List<MetadataService.PackageTypeMembers>();
-		MetadataService.PackageTypeMembers layoutType = new MetadataService.PackageTypeMembers();
-		layoutType.name = 'Layout'; 
-		layoutType.members = new String[] { LayoutName };
-		retrieveRequest.unpackaged.types.add(layoutType);
+		MetadataService.PackageTypeMembers packageType = new MetadataService.PackageTypeMembers();
+		packageType.name = MetaDataType; 
+		packageType.members = new String[] { MetaDataItem };
+		retrieveRequest.unpackaged.types.add(packageType);
 		AsyncResult = service.retrieve(retrieveRequest);
 						
 		return null;	
