Final 2% coverage for MetadataService.cls, now 100% code coverage for the Apex Metadata API!

--- a/apex-mdapi/src/classes/MetadataServiceTest.cls
+++ b/apex-mdapi/src/classes/MetadataServiceTest.cls
@@ -421,5 +421,11 @@ private class MetadataServiceTest
         new MetadataService.CallCenterSection();
         new MetadataService.EntitlementProcessMilestoneTimeTrigger();
         new MetadataService.StaticResource();
+        new MetadataService.MilestoneType();
+        new MetadataService.FiscalYearSettings();
+        new MetadataService.CompanySettings();
+        new MetadataService.WebToCaseSettings();
+        new MetadataService.EscalationRule();
+        new MetadataService.DashboardMobileSettings();
     }
 }
