Ensured once again 100% coverage for this, after Summer'13 refresh.

--- a/apex-mdapi/src/classes/MetadataServiceTest.cls
+++ b/apex-mdapi/src/classes/MetadataServiceTest.cls
@@ -427,5 +427,66 @@ private class MetadataServiceTest
         new MetadataService.WebToCaseSettings();
         new MetadataService.EscalationRule();
         new MetadataService.DashboardMobileSettings();
+        new MetadataService.FieldOverride();
+        new MetadataService.QuotasSettings();
+        new MetadataService.Skill();
+        new MetadataService.AgentConfigProfileAssignments();
+        new MetadataService.LiveAgentSettings();
+        new MetadataService.SkillAssignments();
+        new MetadataService.ActivitiesSettings();
+        new MetadataService.LiveAgentConfig();
+        new MetadataService.ApprovalPageField();
+        new MetadataService.QuickActionList();
+        new MetadataService.LiveChatButtonDeployments();
+        new MetadataService.InstalledPackage();
+        new MetadataService.PushNotification();
+        new MetadataService.LiveChatAgentConfig();
+		new MetadataService.AdjustmentsSettings();                               
+		new MetadataService.ForecastingSettings();                                
+		new MetadataService.QuickActionListItem();           
+		new MetadataService.Branding();          
+		new MetadataService.QuickActionLayoutItem();                     
+		new MetadataService.OpportunityListFieldsSelectedSettings();        
+		new MetadataService.ApprovalStepRejectBehavior();
+		new MetadataService.FolderShare();   
+		new MetadataService.ApprovalEntryCriteria();                                
+		new MetadataService.ProductSettings();                                
+		new MetadataService.OpportunitySettings();              
+		new MetadataService.LiveChatDeployment();                                
+		new MetadataService.QuickActionLayoutColumn();           
+		new MetadataService.GlobalQuickActionTranslation();      
+		new MetadataService.ApprovalStepApprover();                                
+		new MetadataService.QuoteSettings();         
+		new MetadataService.LiveChatButton();                                
+		new MetadataService.Network();
+		new MetadataService.LiveChatDeploymentDomainWhitelist();
+		new MetadataService.KnowledgeLanguageSettings();
+		new MetadataService.Approver();
+		new MetadataService.SamlSsoConfig();
+		new MetadataService.ApprovalSubmitter();
+		new MetadataService.DataSourceSettings();
+		new MetadataService.KeyboardShortcuts();
+		new MetadataService.ApprovalStep();
+		new MetadataService.AgentConfigAssignments();
+		new MetadataService.QuickAction();
+		new MetadataService.DefaultShortcut();
+		new MetadataService.ApprovalAction();
+		new MetadataService.KnowledgeLanguage();
+		new MetadataService.LiveChatButtonSkills();
+		new MetadataService.SkillUserAssignments();
+		new MetadataService.NextAutomatedApprover();
+		new MetadataService.ApprovalProcess();
+		new MetadataService.QuickActionLayout();
+		new MetadataService.PushNotifications();
+		new MetadataService.ForecastRangeSettings();
+		new MetadataService.IdeaReputationLevel();
+		new MetadataService.NetworkTabSet();
+		new MetadataService.SkillProfileAssignments();
+		new MetadataService.CustomShortcut();
+		new MetadataService.PagesToOpen();
+		new MetadataService.AgentConfigUserAssignments();
+		new MetadataService.NetworkMemberGroup();
+		new MetadataService.FindSimilarOppFilter();
+		new MetadataService.QuickActionTranslation();				
     }
 }
